# octo

./: .gitignore  Cargo.toml  README.md
crates/parser/: Cargo.toml
crates/parser/data/b64/: test.b64  tiny.msdata.mzML0.99.10.b64  tiny.msdata.mzML0.99.9.b64  tiny.pwiz.mzML0.99.10.b64  tiny.pwiz.mzML0.99.9.b64  tiny1.mzML0.99.0.b64  tiny1.mzML0.99.1.b64  tiny2_SRM.mzML0.99.0.b64  tiny2_SRM.mzML0.99.1.b64  tiny4_LTQ-FT.mzML0.99.0.b64  tiny4_LTQ-FT.mzML0.99.1.b64
crates/parser/data/mzml/: test.mzML  tiny.msdata.mzML0.99.10.mzML  tiny.msdata.mzML0.99.9.mzML  tiny.pwiz.mzML0.99.10.mzML  tiny.pwiz.mzML0.99.9.mzML  tiny1.mzML0.99.0.mzML  tiny1.mzML0.99.1.mzML  tiny2_SRM.mzML0.99.0.mzML  tiny2_SRM.mzML0.99.1.mzML  tiny4_LTQ-FT.mzML0.99.0.mzML  tiny4_LTQ-FT.mzML0.99.1.mzML
crates/parser/src/: B000.MD  lib.rs
crates/parser/src/b64/: attr_meta.rs  decode.rs  decode2.rs  encode.rs  encode2.rs  mod.rs
crates/parser/src/mzml/: attr_meta.rs  bin_to_mzml.rs  cv_table.rs  mod.rs  parse_mzml.rs  schema.json  schema.rs  (+1 more)
crates/parser/tests/: test_mzML.rs  test_mzML_b64.rs  tiny1_mzML0_99_0.rs  tiny1_mzML0_99_0_b64.rs  tiny1_mzML0_99_1.rs  tiny2_SRM_mzML0_99_0.rs  tiny2_SRM_mzML0_99_0_b64.rs  tiny2_SRM_mzML0_99_1.rs  tiny2_SRM_mzML0_99_1_b64.rs  tiny4_LTQ-FT_mzML0_99_0.rs  tiny4_LTQ-FT_mzML0_99_0_b64.rs  tiny4_LTQ-FT_mzML0_99_1.rs  tiny_msdata_mzML0_99_10_b64.rs  tiny_msdata_mzML0_99_9_b64.rs  tiny_msdata_mzml0_99_10.rs  tiny_msdata_mzml0_99_9.rs  tiny_mzml0_99_0.rs  tiny_pwiz_mzML0_99_10.rs  tiny_pwiz_mzML0_99_10_b64.rs  tiny_pwiz_mzML0_99_9.rs  tiny_pwiz_mzML0_99_9_b64.rs
(+167 files in other folders)
