[package]
name = "octo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
base64 = { workspace = true }
miniz_oxide = { workspace = true }
once_cell = { workspace = true }
quick-xml = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
rustc-hash = "2.1.1"
